  - Fixed search field on projects page
  - Added teams to search autocomplete
  - Move groups and teams on dashboard sidebar to sub-tabs
  - API: improved return codes and docs. (Felix Gilcher, Sebastian Ziebell)
  - Redesign wall to be more like chat
  - Snippets, Wall features are disabled by default for new projects

v 4.2.0
  - Teams
  - User show page. Via /u/username
  - Show help contents on pages for better navigation
  - Async gitolite calls
  - added satellites logs
  - can_create_group, can_create_team booleans for User
  - Process web hooks async
  - GFM: Fix images escaped inside links
  - Network graph improved
  - Switchable branches for network graph
  - API: Groups
  - Fixed project download

v 4.1.0
  - Optional Sign-Up
  - Discussions
  - Satellites outside of tmp
  - Line numbers for blame
  - Project public mode
  - Public area with unauthorized access
  - Load dashboard events with ajax
  - remember dashboard filter in cookies
  - replace resque with sidekiq
  - fix routing issues
  - cleanup rake tasks
  - fix backup/restore
  - scss cleanup
  - show preview for note images
  - improved network-graph
  - get rid of app/roles/
  - added new classes Team, Repository
  - Reduce amount of gitolite calls
  - Ability to add user in all group projects
  - remove deprecated configs
  - replaced Korolev font with open font
  - restyled admin/dashboard page
  - restyled admin/projects page

v 4.0.0
  - Remove project code and path from API. Use id instead
  - Return valid cloneable url to repo for web hook
  - Fixed backup issue
  - Reorganized settings
  - Fixed commits compare
  - Refactored scss
  - Improve status checks
  - Validates presence of User#name
  - Fixed postgres support
  - Removed sqlite support
  - Modified post-receive hook
  - Milestones can be closed now
  - Show comment events on dashboard
  - Quick add team members via group#people page
  - [API] expose created date for hooks and SSH keys
  - [API] list, create issue notes