@@ -3,6 +3,7 @@
 <<<<<<< HEAD
 <<<<<<< HEAD
 <<<<<<< HEAD
+<<<<<<< HEAD
 8.4.0.pre
 =======
 4.0.1
@@ -19,3 +20,6 @@
 =======
 4.1.0
 >>>>>>> origin/4-1-stable
+=======
+4.2.0
+>>>>>>> gitlabhq/4-2-stable
