@@ -500,6 +500,7 @@ class Repository
     # Build file path
     file_name = self.path_with_namespace.gsub("/","_") + "-" + commit.id.to_s + ".tar.gz"
     storage_path = Rails.root.join("tmp", "repositories")
+<<<<<<< HEAD
     file_path = File.join(storage_path, file_name)
 >>>>>>> gitlabhq/4-1-stable
 
@@ -595,6 +596,9 @@ class Repository
       data: data
     )
   end
+=======
+    file_path = File.join(storage_path, self.path_with_namespace, file_name)
+>>>>>>> gitlabhq/4-2-stable
 
   def fetch_ref(source_path, source_ref, target_ref)
     args = %W(#{Gitlab.config.git.bin_path} fetch -f #{source_path} #{source_ref}:#{target_ref})
@@ -605,8 +609,15 @@ class Repository
     random_string = SecureRandom.hex
     tmp_ref = "refs/tmp/#{random_string}/head"
 
+<<<<<<< HEAD
     if oldrev && !Gitlab::Git.blank_ref?(oldrev)
       rugged.references.create(tmp_ref, oldrev)
+=======
+    # Create file if not exists
+    unless File.exists?(file_path)
+      FileUtils.mkdir_p File.dirname(file_path)
+      file = self.repo.archive_to_file(ref, prefix,  file_path)
+>>>>>>> gitlabhq/4-2-stable
     end
 
     # Make commit in tmp ref
