@@ -1,0 +1,38 @@
+%h3.page_title
+  Teams
+  %small
+    simple Teams description
+
+  = link_to 'New Team', new_admin_team_path, class: "btn btn-small pull-right"
+  %br
+
+= form_tag admin_teams_path, method: :get, class: 'form-inline' do
+  = text_field_tag :name, params[:name], class: "xlarge"
+  = submit_tag "Search", class: "btn submit btn-primary"
+
+%table
+  %thead
+    %tr
+      %th
+        Name
+        %i.icon-sort-down
+      %th Path
+      %th Projects
+      %th Members
+      %th Owner
+      %th.cred Danger Zone!
+
+  - @teams.each do |team|
+    %tr
+      %td
+        %strong= link_to team.name, admin_team_path(team)
+      %td= team.path
+      %td= team.projects.count
+      %td= team.members.count
+      %td
+        = link_to team.owner.name, admin_user_path(team.owner)
+      %td.bgred
+        = link_to 'Rename', edit_admin_team_path(team), id: "edit_#{dom_id(team)}", class: "btn btn-small"
+        = link_to 'Destroy', admin_team_path(team), confirm: "REMOVE #{team.name}? Are you sure?", method: :delete, class: "btn btn-small btn-remove"
+
+= paginate @teams, theme: "admin"
