@@ -1,0 +1,2 @@
+:plain 
+  Pager.append(#{@events.count}, "#{escape_javascript(render(@events))}");
